--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ body {
 
 body {
   max-width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
